committing programs